--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -20,9 +20,14 @@
     > .controls {
         position: absolute;
         z-index: 5;
-        padding: 8px 16px;
+        padding: 8px 10px;
         box-sizing: border-box;
         gap: 8px;
+
+        h3 {
+            margin-top: 2px;
+            font-weight: normal;
+        }
 
         button.active {
             color: var(--color-text-primary);
@@ -48,8 +53,9 @@
     #prefabPalette {
         top: 240px;
         right: 16px;
-        max-width: 232px;
+        max-width: 222px;
         z-index: 6;
+        gap: 0;
 
         > .prefab-selection {
             display: flex;
@@ -105,9 +111,11 @@
             transition-duration: 0.3s;
             overflow: hidden;
             max-height: 600px;
+            margin-top: 8px;
 
             &.disabled {
                 max-height: 0;
+                margin-top: 0;
             }
 
             span {
@@ -138,12 +146,11 @@
             > li {
                 border: none;
                 border-radius: 0;
-                color: var(--color-button-text);
+                color: var(--color-note);
                 align-items: baseline;
                 display: flex;
                 justify-content: space-between;
                 cursor: pointer;
-                opacity: 0.75;
                 background-color: var(--color-background);
 
                 &.active::after {
@@ -158,7 +165,7 @@
                 }
 
                 &:hover {
-                    opacity: 1;
+                    background-color: var(--color-not-intense);
                 }
             }
 
@@ -282,13 +289,14 @@
 
         button {
             position: relative;
+            background-color: var(--color-background);
         }
 
         #dice {
             position: absolute;
             top: 0;
             left: calc(100% + 4px);
-            background-color: var(--color-not-intense);
+            background-color: var(--color-background);
             padding: 4px;
             border-collapse: collapse;
             pointer-events: none;
@@ -300,7 +308,7 @@
                 @extend %clickable;
                 padding: 4px;
                 min-width: 20px;
-                border: 1px solid var(--color-input-active);
+                border: 1px solid var(--color-not-intense);
                 transition-duration: 0s;
             }
         }
