keep canvas blink animation while changing tiles

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -43,7 +43,7 @@ body {
         --color-primary: #ffb77c;
         --color-text-primary: white;
         --color-text-inverse: black;
-        --color-not-intense: #38322e;
+        --color-not-intense: #2e2926;
         --color-button-hover: #4b3d39;
         --color-button-active: #3d302c;
         --color-button-big: #524c49;
