--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -18,12 +18,12 @@ body {
     background-color: var(--color-background);
 
     --color-background: white;
-    --color-primary: #bd571b;
+    --color-primary: #97574c;
     --color-text-primary: #111;
     --color-text-inverse: white;
     --color-not-intense: #ddd;
-    --color-button-hover: #ddd;
-    --color-button-active: #bbb;
+    --color-button-hover: #bbb;
+    --color-button-active: #b0b0b0;
     --color-button-big: #d0d0d0;
     --color-button-text: #333;
     --color-input-underline: #bbb;
@@ -32,28 +32,32 @@ body {
     --color-good: #009c46;
     --color-bad: #e24b4b;
     --color-note: #777;
-    --color-panel-border: #333;
+    --color-panel-border: #af9b97aa;
+    --color-header: white;
+    --color-separator: #ccc;
 
     --weight-thick: bold;
     --shadow-panel: 0 0 8px 2px #0000;
     --shadow-text: none;
 
     &.dark-mode {
-        --color-background: #0e0e0e;
+        --color-background: #1a1717;
         --color-primary: #ffb77c;
         --color-text-primary: white;
         --color-text-inverse: black;
-        --color-not-intense: #2e2926;
+        --color-not-intense: #443c36;
         --color-button-hover: #4b3d39;
-        --color-button-active: #3d302c;
+        --color-button-active: #493631;
         --color-button-big: #524c49;
         --color-button-text: #ccc;
-        --color-input-underline: #444;
+        --color-input-underline: #6b534e;
         --color-selected: #ccc;
         --color-good: #62ffa9;
         --color-bad: #ff7676;
         --color-note: #aaa;
-        --color-panel-border: #777;
+        --color-panel-border: #72534aaa;
+        --color-header: #2e2926;
+        --color-separator: #614f4a;
     
         --weight-thick: 500;
         --shadow-panel: 0 0 12px 6px #0006;
@@ -205,19 +209,24 @@ input {
         margin: 0 !important;
         padding: 0 !important;
         width: 100%;
+        cursor: pointer;
     }
     &[type=range] {
         -webkit-appearance: none;  /* Override default CSS styles */
         width: 100%; /* Full-width */
         height: 4px; /* Specified height */
         margin: 8px 0 !important;
-        background: var(--color-button-active); /* Grey background */
+        background: var(--color-button-active);
         outline: none; /* Remove outline */
-        -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-        transition: opacity .2s;
 
         &:hover {
-            opacity: 1; /* Fully shown on mouse-over */
+            &::-webkit-slider-thumb {
+                background: var(--color-primary);
+            }
+            
+            &::-moz-range-thumb {
+                background: var(--color-primary);
+            }
         }
 
         &::-webkit-slider-thumb {
@@ -227,15 +236,7 @@ input {
             height: 16px; /* Slider handle height */
             border-radius: 50%;
             background: var(--color-button-text);
-            cursor: pointer; /* Cursor on hover */
             transition-duration: 0.1s;
-
-            &:hover {
-                background: var(--color-primary);
-            }
-            &:active {
-                background: var(--color-primary);
-            }
         }
         
         &::-moz-range-thumb {
@@ -243,7 +244,6 @@ input {
             height: 16px; /* Slider handle height */
             border-radius: 50%;
             background: white;
-            cursor: pointer; /* Cursor on hover */
         }
     }
 }
@@ -426,8 +426,9 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 10px 12px 8px 12px;
-    border-bottom: 2px solid var(--color-not-intense);
+    border-bottom: 2px solid var(--color-separator);
     align-items: center;
+    background-color: var(--color-header);
 
     > span > * {
         opacity: 1;
