--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -27,7 +27,7 @@
     #loginTab {
         align-items: center;
         gap: 28px;
-        border-bottom: 2px solid var(--color-not-intense);
+        border-bottom: 2px solid var(--color-separator);
         text-align: center;
         overflow: hidden;
         max-height: 100vh;
@@ -70,7 +70,7 @@
         box-shadow: 0 0 4px var(--color-panel-shadow);
         padding: 8px;
         gap: 16px;
-        width: 200px;
+        min-width: 200px;
         border-radius: base.$radius;
         transition-duration: 0.3s;
         animation: popup 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) backwards;
