fixed prefab creation

--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -66,7 +66,7 @@
     .game {
         display: flex;
         flex-direction: column;
-        background-color: var(--color-not-intense);
+        background-color: var(--color-header);
         box-shadow: 0 0 4px var(--color-panel-shadow);
         padding: 8px;
         gap: 16px;
