--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -97,7 +97,7 @@ p {
 }
 
 %heading {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit;
     margin: 0;
     font-weight: var(--weight-thick);
 }
@@ -216,7 +216,7 @@ input {
         width: 100%; /* Full-width */
         height: 4px; /* Specified height */
         margin: 8px 0 !important;
-        background: var(--color-button-active);
+        background: var(--color-input-underline);
         outline: none; /* Remove outline */
 
         &:hover {
@@ -432,7 +432,6 @@ header {
 
     > span > * {
         opacity: 1;
-        transition-duration: 0.2s;
 
         &.hidden {
             @extend .invisible;
