implemented measuring distance text

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -456,13 +456,28 @@
         transition-duration: 0.2s;
     }
 
+    > .hidden {
+        display: none;
+    }
+
     #distanceCanvas {
         animation: blink 0.5s infinite linear;
         z-index: 100;
+    }
 
-        &.hidden {
-            display: none;
-        }
+    #distanceText {
+        position: absolute;
+        z-index: 101;
+        padding: 8px 12px;
+        border-radius: base.$radius;
+        background-color: var(--color-not-intense);
+        box-shadow: 0 0 8px 2px #0005;
+        margin-bottom: 12px;
+        transform-origin: top left;
+        transition-duration: 0.1s;
+        transition-property: transform;
+        transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+        pointer-events: none;
     }
 }
 
