renamed occurrences of GM to DM because why not

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -384,8 +384,8 @@
     display: flex;
     flex-direction: row;
 
-    &:not(.is-gm) {
-        .gm {
+    &:not(.is-dm) {
+        .dm {
             display: none !important;
         }
 
