--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -5,16 +5,20 @@
     box-shadow: 0 0 6px var(--color-text-inverse) inset;
 }
 
+#boardContainer, #map {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
 #boardContainer {
     position: relative;
     overflow: hidden;
     user-select: none;
-    width: 100%;
-    height: 100%;
     min-height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     box-sizing: border-box;
 
     > .controls {
@@ -561,5 +565,32 @@
         box-shadow: 0 0 16px 4px #000a,
                     0 0 8px #0008 inset;
         z-index: 3;
+    }
+}
+
+#map {
+    position: absolute;
+    z-index: 10;
+    background-color: #000a;
+    transition-duration: 0.5s;
+
+    > img {
+        position: relative;
+        $size: calc(100% - 100px);
+        width: $size;
+        height: $size;
+        object-fit: contain;
+        transition-duration: 0.5s;
+        transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+    }
+
+    &:not(.show) {
+        pointer-events: none;
+        opacity: 0;
+
+        > img {
+            transform: translateY(150%);
+            transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        }
     }
 }
