--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -574,19 +574,31 @@
     background-color: #000a;
     transition-duration: 0.5s;
 
+    > button[type=reset] {
+        @extend %responsive;
+        position: absolute;
+        left: 16px;
+        top: 16px;
+        font-size: 23px;
+        align-items: center;
+        gap: 6px;
+    }
+
     > img {
         position: relative;
         $size: calc(100% - 100px);
         width: $size;
         height: $size;
         object-fit: contain;
-        transition-duration: 0.5s;
+        transition-duration: 0.4s;
         transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+        transform: translateY(16px);
     }
 
     &:not(.show) {
         pointer-events: none;
         opacity: 0;
+        transition-duration: 0.25s;
 
         > img {
             transform: translateY(150%);
