multiple maps instead of only one

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -202,7 +202,7 @@ input {
     transition-property: border-bottom-color;
     transition-duration: 0.1s;
     margin-bottom: 1px;
-    background-color: inherit;
+    background-color: transparent;
     color: inherit;
     padding: 0 1px 3px 1px;
 
