--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -581,15 +581,16 @@
 
     > button[type=reset] {
         @extend %responsive;
-        position: absolute;
         left: 16px;
         top: 16px;
     }
 
     > button {
+        position: absolute;
         font-size: inherit;
         align-items: center;
         gap: 8px;
+        bottom: 16px;
     }
 
     > input {
@@ -612,6 +613,7 @@
         align-items: center;
         min-width: 100%;
         height: 100%;
+        max-height: calc(100% - 48px);
         box-sizing: border-box;
         padding: 0 20px;
 
@@ -654,27 +656,26 @@
         }
     }
 }
-  
-  #whiteboardPin {
+
+#whiteboardPin {
     fill: #fffa;
     stroke: black;
     stroke-width: 2px;
     animation: pin-pulse 4s ease-in-out infinite;
     opacity: 0;
-  }
-  #whiteboardPin.visible {
-    opacity: 1;
-  }
+
+    &.visible {
+        opacity: 1;
+    }
+}
   
-  @keyframes pin-pulse {
+@keyframes pin-pulse {
       0% { r: 10 }
      50% { r: 15 }
     100% { r: 10 }
-  }
-  
-  svg 
-  
-  #whiteboardTextControls {
+}
+
+#whiteboardTextControls {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -685,34 +686,36 @@
     box-shadow: 0 0 4px #0005;
     transition-property: opacity, transform;
     transition-duration: 0.2s;
-  }
-  #whiteboardTextControls.hidden {
-    opacity: 0;
-    pointer-events: none;
-    transform: translate(-50%, calc(-100% - 8px));
-  }
-  
-  #whiteboardTextControls span {
-    display: flex;
-    gap: inherit;
-    align-items: center;
-  }
-  
-  #whiteboardTextControls textarea, #whiteboardTextControls input {
-    resize: none;
-    border: none;
-    outline: 1px solid #aaa;
-  }
-  
-  #whiteboardTextControls textarea {
-    width: 400px;
-    height: 60px;
-    overflow: auto;
-    white-space: nowrap;
-  }
-  
-  #whiteboardTextControls input {
-    padding: 4px;
-    width: 40px;
-    margin-right: auto;
-  }
+
+    &.hidden {
+        opacity: 0;
+        pointer-events: none;
+        transform: translate(-50%, calc(-100% - 8px));
+    }
+
+    span {
+        display: flex;
+        gap: inherit;
+        align-items: center;
+    }
+
+    textarea, input {
+        resize: none;
+        border: none;
+        outline: 1px solid #aaa;
+    }
+    
+    textarea {
+        width: 400px;
+        height: 60px;
+        overflow: auto;
+        white-space: nowrap;
+    }
+    
+    input {
+        padding: 4px;
+        width: 40px;
+        margin-right: auto;
+    }
+
+}
