--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -576,7 +576,7 @@
     background-color: #000d;
     transition-duration: 0.5s;
     font-size: 23px;
-    padding: 20px 0;
+    padding-top: 20px;
     gap: 12px;
 
     > button[type=reset] {
@@ -642,6 +642,10 @@
                 font-size: 20px;
             }
         }
+
+        &.hidden {
+            display: none;
+        }
     }
 
     .map {
@@ -650,7 +654,7 @@
         align-items: center;
         min-width: 100%;
         height: 100%;
-        max-height: calc(100% - 48px);
+        max-height: calc(100% - 24px);
         box-sizing: border-box;
         padding: 0 20px;
 
